Integrated Admin Auth in Admin panel

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -56,11 +56,11 @@ services:
         environment: 
             - MYSQL_DATABASE=laravel-${COMPOSE_PROJECT_NAME}
             - MYSQL_ROOT_PASSWORD=laravel
-        command: [
-                'mysqld', 
-                '--character-set-server=utf8mb4',
-                '--collation-server=utf8mb4_unicode_ci'
-            ]
+        # command: [
+        #         'mysqld', 
+        #         '--character-set-server=utf8mb4',
+        #         '--collation-server=utf8mb4_unicode_ci'
+        #     ]
             # - mysqld \ 
             #   --character-set-server=utf8mb4 \ 
             #   --collation-server=utf8mb4_unicode_ci
