--- a/docker/php/dockerfile
+++ b/docker/php/dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.4-fpm
+FROM php:7.4.0-fpm
 
 RUN apt-get update
 RUN apt-get install -y zip
@@ -6,6 +6,8 @@ RUN apt-get install -y unzip
 RUN apt-get install -y git
 RUN apt-get install -y curl
 RUN apt-get install -y vim
+RUN apt-get -y install imagemagick php7.4-imagick php7.4-pcntl php7.4-mysql php7.4-gd php7.4-pgsql php7.4-sqlite nano php7.4-redis php-bcmath php7.4-zmq\
+    && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
     
 # Install MySQLi
 RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
