Succesful connecting ShouldBroadcastNow

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -59,6 +59,8 @@ services:
         tty: true
         volumes: 
             - ../:/var/project
+        ports: 
+            - 6001:6001
         depends_on: 
             - mysql
         links: 
