--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "beyondcode/laravel-websockets": "^1.9",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "~3.0",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
