--- a/docker/nginx/project/nginx.conf
+++ b/docker/nginx/project/nginx.conf
@@ -1,9 +1,9 @@
-upstream ngx_proxy_imgs {
-    server ngx_proxy_imgs:8888;
-}
+# upstream ngx_proxy_imgs {
+#     server ngx_proxy_imgs:8888;
+# }
 
-# Cache settings
-proxy_cache_path /tmp/nginx-images-cache/ levels=1:2 keys_zone=images:10m inactive=24h max_size=100m;
+# # Cache settings
+# proxy_cache_path /tmp/nginx-images-cache/ levels=1:2 keys_zone=images:10m inactive=24h max_size=100m;
 
 server {
     listen 80;
@@ -36,18 +36,19 @@ server {
     # Proxy Server
     # location ~ "^/storage/images/(?<prefix>[0-9a-z]+)/(?<width>\d+)/(?<image>.+)$" {
     # location ~ "^/storage/images/(?<prefix>[0-9a-z]+)/(?<width>\d+)/(?<image>.+)$" {
-    location ~ "^/storage/images/(?<prefix>[A-Za-z]+)/(?<width>\d+)/(?<image>.+)$" {
-        proxy_pass http://ngx_proxy_imgs/pages/$prefix/$width/$image;
-        proxy_cache images;
-        proxy_cache_valid 200 24h;
-        proxy_cache_valid any 1m;
-    }
+        
+    # location ~ "^/storage/images/(?<prefix>[A-Za-z]+)/(?<width>\d+)/(?<image>.+)$" {
+    #     proxy_pass http://ngx_proxy_imgs/pages/$prefix/$width/$image;
+    #     proxy_cache images;
+    #     proxy_cache_valid 200 24h;
+    #     proxy_cache_valid any 1m;
+    # }
 
-    # This only Announcements
-    location ~ "^/storage/images/announcement/(?<concrete>[A-Za-z]+)/(?<width>\d+)/(?<image>.+)$" {
-        proxy_pass http://ngx_proxy_imgs/pages/announcement/$concrete/$width/$image;
-        proxy_cache images;
-        proxy_cache_valid 200 24h;
-        proxy_cache_valid any 1m;
-    }
+    # # This only Announcements
+    # location ~ "^/storage/images/announcement/(?<concrete>[A-Za-z]+)/(?<width>\d+)/(?<image>.+)$" {
+    #     proxy_pass http://ngx_proxy_imgs/pages/announcement/$concrete/$width/$image;
+    #     proxy_cache images;
+    #     proxy_cache_valid 200 24h;
+    #     proxy_cache_valid any 1m;
+    # }
 }
