--- a/package.json
+++ b/package.json
@@ -117,6 +117,8 @@
     },
     "dependencies": {
         "advanced-laravel-vue-paginate": "^0.1.9",
+        "laravel-echo": "^1.9.0",
+        "pusher-js": "^7.0.2",
         "vue-notification": "^1.3.20",
         "vuejs-dialog": "^1.4.2"
     }
