--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -4,7 +4,7 @@ worker_processes  1;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
-# load_module /usr/lib/nginx/modules/ngx_http_image_filter_module.so;
+load_module /usr/lib/nginx/modules/ngx_http_image_filter_module.so;
 
 events {
     worker_connections  1024;
