--- a/docker/php_cli/dockerfile
+++ b/docker/php_cli/dockerfile
@@ -1,5 +1,4 @@
 FROM phpdockerio/php74-cli:latest
-WORKDIR "/application"
 
 # Fix debconf warnings upon build
 ARG DEBIAN_FRONTEND=noninteractive
@@ -12,5 +11,5 @@ RUN apt-get update \
     && apt-get -y --no-install-recommends install imagemagick php7.4-imagick php7.4-mysql php7.4-pgsql nano php7.4-gd php7.4-redis php7.4-bcmath php7.4-zmq \
     && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
-COPY ./ /var/project
+WORKDIR /var/project
 # RUN rm -rf /var/project/docker && chmod -R 777 /var/project/bootstrap && chmod -R 777 /var/project/storage
