--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,9 @@
 {
-    "/js/main.js": "/js/main.js?id=5a7cb4dd7f7ff9ca3af0"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/css/main.css": "/css/main.css",
+    "/css/vuesax.css": "/css/vuesax.css",
+    "/css/iconfont.css": "/css/iconfont.css",
+    "/css/material-icons/material-icons.css": "/css/material-icons/material-icons.css",
+    "/css/prism-tomorrow.css": "/css/prism-tomorrow.css"
 }
